--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Awesome, we tested infernece now lets build a cool demo which support streaming responses. [Amazon SageMaker supports streaming responses](https://aws.amazon.com/de/blogs/machine-learning/elevating-the-generative-ai-experience-introducing-streaming-support-in-amazon-sagemaker-hosting/) from your model. We can use this to stream responses, we can leverage this to create a streaming gradio application with a better user experience.\n",
+    "Awesome, we tested inference. Now, let's build a cool demo that supports streaming responses. [Amazon SageMaker supports streaming responses](https://aws.amazon.com/de/blogs/machine-learning/elevating-the-generative-ai-experience-introducing-streaming-support-in-amazon-sagemaker-hosting/) from your model. We can use this to stream responses, we can leverage this to create a streaming gradio application with a better user experience.\n",
     "\n",
     "We created a sample application that you can use to test your model. You can find the code in [gradio-app.py](../demo/sagemaker_chat.py). The application will stream the responses from the model and display them in the UI. You can also use the application to test your model with your own inputs. With `share=True` you can share the application with others, since gradio with create a public link for you valid for 72 hours."
    ]
@@ -376,7 +376,7 @@
    "source": [
     "Now we can run the benchmark with the following command. We are going to benchmark using `5` concurrent users and max `100` requests. The benchmark will measure `first-time-to-token`, `latency (ms/token)` and `throughput (tokens/s)` full details can be found in the `results` folder\n",
     "\n",
-    "_🚨Important🚨: This benchmark was initiatied on a instance in us-east-1. Network communication thorugh the internet can have impact on the `first-time-to-token` metric. If you want to measure the `first-time-to-token` correctly, you need to run the benchmark on the same host or your production region._"
+    "_🚨Important🚨: This benchmark was initiated on an instance in us-east-1. Network communication through the internet can have an impact on the `first-time-to-token` metric. If you want to measure the `first-time-to-token` correctly, you need to run the benchmark on the same host or your production region._"
    ]
   },
   {
@@ -444,9 +444,9 @@
     "\n",
     "We achieved a throughput of `288.00 tokens/sec` with an average inter-token latency of `10.67ms/token` and a time-to-first-token of `2435.47ms` for Mixtral 8x7B on inf2.48xlarge with 5 concurrent requests. The fastest latency was `6.45ms/token` with a time-to-first-token of `643.33ms` at 1 concurrent request. \n",
     "\n",
-    "While scaling the number of concurrent requests, we observed that throughput peaked before reaching 10 concurrent users, as the thorughput and number of requests not increased afterwards. We would need to increase the number of replicas or batch size to improve the throughput. Scaling beyond 50 concurrent users, will lead to timeouts on the SageMaker side since requests are processed for longer than 60s. The inf2.48xlarge instance costs 12.98$/h on-demand and 7.79$/h with a 1-year savings plan for EC2.\n",
+    "While scaling the number of concurrent requests, we observed that throughput peaked before reaching 10 concurrent users, as the throughput and number of requests did not increase afterward. We would need to increase the number of replicas or batch size to improve the throughput. Scaling beyond 50 concurrent users, will lead to timeouts on the SageMaker side since requests are processed for longer than 60s. The inf2.48xlarge instance costs 12.98$/h on-demand and 7.79$/h with a 1-year savings plan for EC2.\n",
     "\n",
-    "This benchmark is a good start to understand the performance of Mixtral 8x7B, but if you plan to use the model in production, we recommend to run a longer, more optimal detailed benchmark. Using your own data and moving client and host into the correct infrastructure setup. We successfully deployed, tested and benchmarked Mixtral 8x7B on AWS Inferentia2. 🎉 "
+    "This benchmark is a good start to understand the performance of Mixtral 8x7B, but if you plan to use the model in production, we recommend running a longer, more optimal detailed benchmark. Using your own data and moving client and host into the correct infrastructure setup. We successfully deployed, tested and benchmarked Mixtral 8x7B on AWS Inferentia2. 🎉 "
    ]
   },
   {
