--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -374,9 +374,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can run the benchmark with the following command. We are going to benchmark using `5` concurrent users and max `100` requests. The benchmark will measure `first-time-to-token`, `latency (ms/token)` and `throughput (tokens/s)` full details can be found in the `results` folder\n",
+    "Now we can run the benchmark with the following command. We are going to benchmark using `5` concurrent users and max `100` requests. The benchmark will measure `Time-to-first-Token`, `Inter-Token-Latency (ms/token)` and `Throughput (tokens/sec)` full details can be found in the `results` folder\n",
     "\n",
-    "_🚨Important🚨: This benchmark was initiated on an instance in us-east-1. Network communication through the internet can have an impact on the `first-time-to-token` metric. If you want to measure the `first-time-to-token` correctly, you need to run the benchmark on the same host or your production region._"
+    "_🚨Important🚨: This benchmark was initiated on an instance in us-east-1. Network communication through the internet can have an impact on the `Time-to-first-Token` metric. If you want to measure the `Time-to-first-Token` correctly, you need to run the benchmark on the same host or your production region._"
    ]
   },
   {
