--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -444,7 +444,7 @@
     "\n",
     "We achieved a throughput of `288.00 tokens/sec` with an average inter-token latency of `10.67ms/token` and a time-to-first-token of `2435.47ms` for Mixtral 8x7B on inf2.48xlarge with 5 concurrent requests. The fastest latency was `6.45ms/token` with a time-to-first-token of `643.33ms` at 1 concurrent request. \n",
     "\n",
-    "While scaling the number of concurrent requests, we observed that throughput peaked before reaching 10 concurrent users, as the throughput and number of requests did not increase afterward. We would need to increase the number of replicas or batch size to improve the throughput. Scaling beyond 50 concurrent users, will lead to timeouts on the SageMaker side since requests are processed for longer than 60s. The inf2.48xlarge instance costs 12.98$/h on-demand and 7.79$/h with a 1-year savings plan for EC2.\n",
+    "While scaling the number of concurrent requests, we observed that throughput peaked before reaching 10 concurrent users, as the throughput and number of requests did not increase afterward. We would need to increase the number of replicas or batch size to improve the throughput. Scaling beyond 50 concurrent users, will lead to timeouts on the SageMaker side since requests are processed for longer than 60s. The inf2.48xlarge instance costs \\$12.98/hour on-demand and \\$7.79/hour with a 1-year savings plan for EC2.\n",
     "\n",
     "This benchmark is a good start to understand the performance of Mixtral 8x7B, but if you plan to use the model in production, we recommend running a longer, more optimal detailed benchmark. Using your own data and moving client and host into the correct infrastructure setup. We successfully deployed, tested and benchmarked Mixtral 8x7B on AWS Inferentia2. 🎉 "
    ]
